[project]
name = "map_generator"
version = "0.1.0"
description = "This is a random map generator for u-16."
authors = [
    {name = "polyacetal",email = "yotyan988@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
