[project]
name = "src"
version = "0.1.0"
description = "This is a random map generator for u-16."
authors = [
    {name = "polyacetal",email = "yotyan988@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]
packages = [{ include = ".", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
strict = true
exclude = ['.venv', '__pycache__', '.git', '.mypy_cache', 'tests']
